move deploy script into separate file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ script: "npm run build"
 
 deploy:
   provider: script
-  script:
-    - 'while read file; do name="${file#dist/}"; curl -u "$FTP_USER:$FTP_PASSWORD" --ftp-create-dirs -T "$file" ftp://sebastianhaeni.ch/"$name"; done < <( find dist -type f )'
+  skip_cleanup: true
+  script: scripts/deploy.sh
   on:
     branch: master
 
