--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: php
 php: "7.1"
 node_js: "7"
 
+before_install:
+  - chmod +x scripts/deploy.sh
+
 install: "npm install"
 script:
   - "npm run build"
