--- a/package.json
+++ b/package.json
@@ -7,13 +7,7 @@
     "start": "concurrently \"npm run start:api\" \"npm run start:frontend\"",
     "start:api": "php -S 127.0.0.1:8080 -t api",
     "start:frontend": "ng serve --proxy-config proxy.conf.json",
-    "build": "npm run build:frontend && npm run build:api",
-    "build:frontend": "ng build",
-    "prebuild:api": "cd api && composer install --optimize-autoloader",
-    "build:api": "npm run build:api:copy-source && npm run build:api:copy-storage && npm run build:api:copy-vendor",
-    "build:api:copy-source": "copyfiles api/app/** api/bootstrap/app.php api/config/** api/database/migrations/** api/database/migrate.php api/routes/** api/.htaccess api/index.php dist",
-    "build:api:copy-storage": "copyfiles api/**/.gitkeep dist",
-    "build:api:copy-vendor": "copyfiles api/vendor/** dist",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
