--- a/package.json
+++ b/package.json
@@ -14,35 +14,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^5.1.1",
+    "@angular/cdk": "^5.0.1",
+    "@angular/common": "^5.1.1",
+    "@angular/compiler": "^5.1.1",
+    "@angular/core": "^5.1.1",
+    "@angular/forms": "^5.1.1",
+    "@angular/http": "^5.1.1",
+    "@angular/material": "^5.0.1",
+    "@angular/platform-browser": "^5.1.1",
+    "@angular/platform-browser-dynamic": "^5.1.1",
+    "@angular/router": "^5.1.1",
+    "@ngrx/effects": "^4.1.1",
+    "@ngrx/store": "^4.1.1",
     "apollo-angular": "^1.0.0",
     "apollo-angular-link-http": "^1.0.1",
     "apollo-cache-inmemory": "^1.1.4",
     "apollo-client": "^2.1.0",
+    "bootstrap": "^4.0.0-beta.2",
+    "classlist.js": "^1.1.20150312",
     "concurrently": "^3.5.1",
     "copyfiles": "^1.2.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.6.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.1.1",
+    "@angular/language-service": "^5.1.1",
     "@types/graphql": "^0.11.7",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.58",
+    "@types/node": "^8.5.1",
     "codelyzer": "~4.0.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,9 +60,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.1",
-    "ts-node": "~4.0.1",
+    "protractor": "^5.2.2",
+    "ts-node": "^4.0.2",
     "tslint": "~5.8.0",
-    "typescript": "^2.4.2"
+    "typescript": "~2.4.2"
   }
 }
