--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.1",
-    "@angular/cdk": "^5.0.1",
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/forms": "^5.1.1",
-    "@angular/http": "^5.1.1",
-    "@angular/material": "^5.0.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@angular/router": "^5.1.1",
+    "@angular/animations": "^5.1.2",
+    "@angular/cdk": "^5.0.2",
+    "@angular/common": "^5.1.2",
+    "@angular/compiler": "^5.1.2",
+    "@angular/core": "^5.1.2",
+    "@angular/forms": "^5.1.2",
+    "@angular/http": "^5.1.2",
+    "@angular/material": "^5.0.2",
+    "@angular/platform-browser": "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@angular/router": "^5.1.2",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "apollo-angular": "^1.0.0",
@@ -37,31 +37,33 @@
     "copyfiles": "^1.2.0",
     "core-js": "^2.5.3",
     "graphql": "^0.11.7",
-    "graphql-tag": "^2.6.0",
+    "graphql-tag": "^2.6.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.4.2",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
+    "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/language-service": "^5.1.1",
+    "@angular/cli": "1.6.3",
+    "@angular/compiler-cli": "^5.1.2",
+    "@angular/language-service": "^5.1.2",
     "@types/graphql": "^0.11.7",
-    "@types/jasmine": "~2.8.2",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.5.1",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.5.2",
     "codelyzer": "~4.0.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.0",
+    "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.2.2",
-    "ts-node": "^4.0.2",
+    "ts-node": "^4.1.0",
     "tslint": "~5.8.0",
     "typescript": "~2.4.2"
   }
