--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "thermoboard",
-  "version": "0.0.0",
-  "license": "MIT",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "concurrently \"npm run start:api\" \"npm run start:frontend\"",
@@ -12,6 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "license": "UNLICENSED",
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.1.2",
@@ -32,14 +32,18 @@
     "apollo-cache-inmemory": "^1.1.4",
     "apollo-client": "^2.1.0",
     "bootstrap": "^4.0.0-beta.3",
+    "chart.js": "^2.7.1",
     "classlist.js": "^1.1.20150312",
     "concurrently": "^3.5.1",
     "copyfiles": "^1.2.0",
     "core-js": "^2.5.3",
+    "exif-js": "^2.3.0",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "moment": "^2.20.1",
+    "nearest-color": "^0.4.2",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
