--- a/package.json
+++ b/package.json
@@ -14,51 +14,51 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/router": "^5.1.2",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
+    "@angular/forms": "^5.2.1",
+    "@angular/http": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.1",
+    "@angular/platform-browser-dynamic": "^5.2.1",
+    "@angular/router": "^5.2.1",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
-    "apollo-angular": "^1.0.0",
+    "apollo-angular": "^1.0.1",
     "apollo-angular-link-http": "^1.0.1",
     "apollo-cache-inmemory": "^1.1.4",
     "apollo-client": "^2.1.0",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "chart.js": "^2.7.1",
     "classlist.js": "^1.1.20150312",
     "concurrently": "^3.5.1",
     "copyfiles": "^1.2.0",
     "core-js": "^2.5.3",
     "exif-js": "^2.3.0",
-    "graphql": "^0.11.7",
+    "graphql": "^0.11.3",
     "graphql-tag": "^2.6.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.0",
     "moment": "^2.20.1",
     "nearest-color": "^0.4.2",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.13.0",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/language-service": "^5.1.3",
-    "@types/graphql": "^0.11.7",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.5.7",
-    "codelyzer": "~4.0.2",
-    "jasmine-core": "~2.8.0",
+    "@angular/cli": "^1.6.5",
+    "@angular/compiler-cli": "^5.2.1",
+    "@angular/language-service": "^5.2.1",
+    "@types/graphql": "^0.12.1",
+    "@types/jasmine": "^2.8.4",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^9.3.0",
+    "codelyzer": "~4.1.0",
+    "jasmine-core": "~2.9.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -68,7 +68,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.2.2",
     "ts-node": "^4.1.0",
-    "tslint": "~5.8.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.9.1",
+    "typescript": "~2.6.2"
   }
 }
